--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ body {
 	
 	var layerGroup = L.geoJSON(buildings, {
   		onEachFeature: function (feature, layer) {
-    		layer.bindPopup(<h3>'+feature.properties.building+'</h3>, <p>'+feature.properties.colleges+'</p>, <p>'+feature.properties.departments+'</p>, <p>'+feature.properties.otherpois+'</p>);
+    		layer.bindPopup('+feature.properties.building+'<br>'+feature.properties.colleges+'<br>'+feature.properties.departments+'<br>'+feature.properties.otherpois+');
   }
 }).addTo(map);
       
