--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@ body {
          margin-left:auto;
          margin-right:auto;
          }
+	  .leaflet-popup-content p {
+    margin: 0.2em 0;
 </style>
 </head>
  <body>
@@ -54,7 +56,7 @@ body {
    				attribution: '© OpenStreetMap'}).addTo(map);
 		
 	function onEachFeature(feature, layer) {
-		var popupContent = '<h2>'+feature.properties.building+'</h2><br><p>Colleges: '+feature.properties.colleges+'</p>'+'<br><p>Departments: '+feature.properties.departments+'</p>'+'</p>'+'<br><p>Other Things: '+feature.properties.otherpois+'</p>'
+		var popupContent = '<h3>'+feature.properties.building+'</h3><br><p>Colleges: '+feature.properties.colleges+'</p>'+'<br><p>Departments: '+feature.properties.departments+'</p>'+'</p>'+'<br><p>Other Things: '+feature.properties.otherpois+'</p>'
 
 		if (feature.properties && feature.properties.popupContent) {
 			popupContent += feature.properties.popupContent;
