--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@ body {
 		{"type":"Feature","properties":{"building":"Anderson Field Station (RRWMI)"},"geometry":{"type":"Polygon","coordinates":[[[-93.70171129703522,32.43443813676175],[-93.70166301727295,32.43431362769101],[-93.70149403810501,32.43437022274447],[-93.70153963565825,32.43446982995229],[-93.70156913995743,32.43446077475612],[-93.7015825510025,32.43448114894622],[-93.70171129703522,32.43443813676175]]]}}]};
 		
 	var layerGroup = L.geoJSON(lsus, {
-		'fillcolor':'#461D7C'
-		'color':'#461D7C'
+		'fillcolor':'#461D7C',
+		'color':'#461D7C',
   		onEachFeature: onEachFeature
 	}).addTo(map);
      	
