--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     h2 {text-align: center;}
     h3 {text-align: center;}
     h4 {text-align: center;}
+	  h5 {text-align: center;}
     p {text-align: left;}
 body {
   background-color: #461D7C;
@@ -62,7 +63,7 @@ body {
 	}).addTo(map);
 		
 	function onEachFeature(feature, layer) {
-		var popupContent = '<h4>'+feature.properties.building+'</h4><br><p>What is Here: '+feature.properties.otherpois+'</p>'
+		var popupContent = '<h5>'+feature.properties.building+'</h5><br><p>What is Here: '+feature.properties.otherpois+'</p>'
 
 		if (feature.properties && feature.properties.popupContent) {
 			popupContent += feature.properties.popupContent;
