--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@ body {
          margin-right:auto;
          }
 	  .leaflet-popup-content p {
-    margin: 0.2em 0;
+		  margin: 0.2em 0;
+	  	font-family: Georgia;
+      		color: #461D7C;}
 </style>
 </head>
  <body>
@@ -70,7 +72,7 @@ body {
 		}
 
 		layer.bindPopup(popupContent, {
-  			maxWidth: "auto",
+  			maxWidth: "250px",
 			maxHeight: "auto"
 		});
 	}
