--- a/index.html
+++ b/index.html
@@ -39,7 +39,11 @@ body {
          margin-right:auto;
          }
 	  .leaflet-popup-content p {
-		  margin: 0.2em 0;
+		  margin: 0.1em 0;
+	  	font-family: Georgia;
+      		color: #461D7C;}
+	  .leaflet-popup-content h5 {
+		  margin: 0.1em 0;
 	  	font-family: Georgia;
       		color: #461D7C;}
 </style>
