--- a/index.html
+++ b/index.html
@@ -38,14 +38,11 @@ body {
          margin-left:auto;
          margin-right:auto;
          }
-	  .leaflet-popup-content p {
+	  .leaflet-popup-content {
 		  margin: 0.1em 0;
 	  	font-family: Georgia;
       		color: #461D7C;}
-	  .leaflet-popup-content h5 {
-		  margin: 0.1em 0;
-	  	font-family: Georgia;
-      		color: #461D7C;}
+	
 </style>
 </head>
  <body>
