--- a/index.html
+++ b/index.html
@@ -38,11 +38,18 @@ body {
          margin-left:auto;
          margin-right:auto;
          }
-	  .leaflet-popup-content {
-		  margin: 0.1em 0;
+	  .leaflet-popup-content h1 {
+		  margin: 0.2em 0;
 	  	font-family: Georgia;
       		color: #461D7C;}
-	
+	 .leaflet-popup-content h5 {
+		  margin: 0.2em 0;
+	  	font-family: Georgia;
+      		color: #461D7C;}
+	   .leaflet-popup-content p {
+		  margin: 0.2em 0;
+	  	font-family: Georgia;
+      		color: #461D7C;}
 </style>
 </head>
  <body>
