--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ=="
    crossorigin=""></script>
    <meta name="viewport" content="width=device-width, initial-scale=1">
+	<script src="jquery-3.6.0.min.js"></script>
   <style>
     h1 {text-align: center;}
     h2 {text-align: center;}
@@ -142,7 +143,11 @@ L.control.watermark = function(opts) {
 
 L.control.watermark({ position: 'bottomleft' }).addTo(map);
 
-		
+<div id="searchContainer"></div> 
+		var options = {
+  geojsonServiceAddress: "https://github.com/dr-maguigan/lsus-campus-map/blob/main/lsus.geojson"
+};
+$("#searchContainer").GeoJsonAutocomplete(options);
        </script>				
 </body>
 </html>
