--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@ L.control.watermark = function(opts) {
 L.control.watermark({ position: 'bottomleft' }).addTo(map);
 
 <div id="searchContainer"></div> 
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 		var options = {
   geojsonServiceAddress: "https://github.com/dr-maguigan/lsus-campus-map/blob/main/lsus.geojson"
 };
