--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ body {
 	}).addTo(map);
 		
 	function onEachFeature(feature, layer) {
-		var popupContent = '<h4>'+feature.properties.building+'</h4><h1>_______________________________</h1><br><p>'+feature.properties.otherpois+'</p>'
+		var popupContent = '<h4>'+feature.properties.building+'</h4><h1>______________</h1><br><p>'+feature.properties.otherpois+'</p>'
 
 		if (feature.properties && feature.properties.popupContent) {
 			popupContent += feature.properties.popupContent;
