--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
    <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     h1 {text-align: center;}
-    h2 {text-align: center;}
+    h2 {text-align: center;
+	   color: #FDD023;}
     h3 {text-align: center;}
     h4 {text-align: center;}
 	  h5 {text-align: center;}
     p {text-align: left;}
+	  a{color:#FDD023;}
 body {
   background-color: #461D7C;
 }
@@ -29,7 +31,7 @@ body {
 }
   * {
       font-family: Georgia;
-      color: #FDD023;
+      color: #461D7C;
       }
 	    #map{
          max-width: 85%;
