--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     h4 {text-align: center;}
 	  h5 {text-align: center;}
     p {text-align: left;}
-	  a{color:#FDD023;}
+	  a{text-align: left;
+		  color:#FDD023;}
 body {
   background-color: #461D7C;
 }
