--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	  h5 {text-align: center;}
     p {text-align: left;}
 	  a{text-align: left;
-		  color:#FDD023;}
+		  color:#461D7C;}
 body {
   background-color: #461D7C;
 }
