--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
     h4 {text-align: center;}
 	  h5 {text-align: center;}
     p {text-align: left;}
-	  a{text-align: left;
-		  color:yellow;}
+	  
 body {
   background-color: #461D7C;
 }
@@ -56,9 +55,10 @@ body {
 		  margin: 0.2em 0;
 	  	font-family: Georgia;
       		color: #461D7C;}
-	  .search-input {
-	font-family:Georgia
-}
+	 .leaflet-popup-content a {text-align: left;
+		  color:#FDD023;
+	  margin: 0.2em 0;
+	  	font-family: Georgia}
 .search-input,
 .leaflet-control-search {
 	max-width:400px;
