--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@ body {
 		  margin: 0.2em 0;
 	  	font-family: Georgia;
       		color: #461D7C;}
+	  .leaflet-popup-content h6 {text-align: center;
+    color: #FDD023;
+	  margin: 0.2em 0;
+	  	font-family: Georgia;}
 	   .leaflet-popup-content p {
 		  margin: 0.2em 0;
 	  	font-family: Georgia;
