--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ body {
 	  	font-family: Georgia;
       		color: #461D7C;}
 	 .leaflet-popup-content a {text-align: left;
-		  color:#FDD023;
+		  color:#461D7C;
 	  margin: 0.2em 0;
 	  	font-family: Georgia}
 .search-input,
