--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ body {
       }
 	    #map{
          max-width: 85%;
-         height: 650px;
+         max-height: 65%;
          border: 3px solid #d3d3d3;
          margin-left:auto;
          margin-right:auto;
@@ -63,9 +63,6 @@ body {
 		  color:#461D7C;
 	  margin: 0.2em 0;
 	  	font-family: Georgia}
-.search-input,
-.leaflet-control-search {
-	max-width:400px;
 }
 </style>
 </head>
