--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ body {
       }
 	    #map{
          max-width: 85%;
-         max-height: auto;
+         height: auto;
          border: 3px solid #d3d3d3;
          margin-left:auto;
          margin-right:auto;
