--- a/index.html
+++ b/index.html
@@ -124,8 +124,9 @@ body {
 		
 	var layerGroup = L.geoJSON(lsus, {
 		'fillcolor':'#461D7C',
-		'opacity': 1,
+		'fillopacity': 1,
 		'color':'#461D7C',
+		'opacity': 1,
   		onEachFeature: onEachFeature
 	}).addTo(map);
      	
