--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ body {
     				onAdd: function(map) {
         				var img = L.DomUtil.create('img');
 
-        				img.src = "lsus.png";
+        				img.src = "LSUS_logo.png";
         				img.style.width = '1200px';
 
         return img;
