--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ body {
 	<h1>LSUS Campus Map</h1>
   	<div id="map"></div>
   	<script type="text/javascript">
-       
+       <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
        var map = L.map('map', {
 				 center: [32.42959784231365, -93.70386914933833],
 				 zoom: 16.3,
@@ -151,6 +151,37 @@ L.control.watermark = function(opts) {
 }
 
 L.control.watermark({ position: 'bottomleft' }).addTo(map);
+	 
+	 L.Control.geocoder().addTo(map_init);
+        	if (!navigator.geolocation) {
+            		console.log("Your browser doesn't support geolocation feature!")
+        	} else {
+            		setInterval(() => {
+                		navigator.geolocation.getCurrentPosition(getPosition)
+            		}, 5000);
+        };
+        var marker, circle, lat, long, accuracy;
+
+        function getPosition(position) {
+            // console.log(position)
+            lat = position.coords.latitude
+            long = position.coords.longitude
+            accuracy = position.coords.accuracy
+
+            if (marker) {
+                map_init.removeLayer(marker)
+            }
+
+            if (circle) {
+                map_init.removeLayer(circle)
+            }
+
+            marker = L.marker([lat, long])
+            circle = L.circle([lat, long], { radius: accuracy })
+
+            var featureGroup = L.featureGroup([marker, circle]).addTo(map_init)
+
+            map_init.fitBounds(featureGroup.getBounds())
 
        </script>				
 </body>
