--- a/index.html
+++ b/index.html
@@ -71,7 +71,6 @@ body {
 	<h1>LSUS Campus Map</h1>
   	<div id="map"></div>
   	<script type="text/javascript">
-       <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
        var map = L.map('map', {
 				 center: [32.42959784231365, -93.70386914933833],
 				 zoom: 16.35,
@@ -149,7 +148,8 @@ body {
 L.control.watermark = function(opts) {
     return new L.Control.Watermark(opts);
 }
-
+	 </script>
+	  <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
 L.control.watermark({ position: 'bottomleft' }).addTo(map);
 	 
 	 L.Control.geocoder().addTo(map_init);
