--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ L.control.watermark = function(opts) {
 }
 	 if (navigator.geolocation) {
   navigator.geolocation.getCurrentPosition(
-    (position) => myMap.panTo([position.coords.latitude, position.coords.longitude]),
+    (position) => map.panTo([position.coords.latitude, position.coords.longitude]),
     (err) => console.warn(`Geolocation error (${err.code}): ${err.message}`),
     { timeout: 20000 } 
   );
