--- a/index.html
+++ b/index.html
@@ -149,13 +149,12 @@ L.control.watermark = function(opts) {
     return new L.Control.Watermark(opts);
 }
 	 if (navigator.geolocation) {
-  navigator.geolocation.getCurrentPosition(
-    (position) => map.panTo([position.coords.latitude, position.coords.longitude]),
-    (err) => console.warn(`Geolocation error (${err.code}): ${err.message}`),
-    { timeout: 20000 } 
-  );
-		 var userpos = L.circleMarker([position.coords.latitude,position.coords.longitude]).addTo(map)
-}
+ navigator.geolocation.getCurrentPosition(function (position) {
+console.log(position);
+console.log(position.coords.latitude)
+console.log(position.coords.longitude)
+var marker = L.marker([position.coords.latitude,position.coords.longitude]).addTo(map);
+})
        </script>				
 </body>
 </html>
