--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ L.control.watermark = function(opts) {
 			console.log(position.coords.longitude)
 			var userpos = L.circleMarker([position.coords.latitude,position.coords.longitude]).addTo(map);
 			userpos.setStyle({
-				'fillcolor': 'blue',
+				'fillcolor': '#4c8bf5',
 				'fillopacity': 0.99,
 				'color': '#d3d3d3',
 				'opacity': 0.99,
