--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ L.control.watermark({ position: 'bottomleft' }).addTo(map);
 			console.log(position.coords.longitude)
 			var userpos = L.circleMarker([position.coords.latitude,position.coords.longitude]).addTo(map);
 			userpos.setStyle({
-				'fillcolor': '#4c8bf5',
+				'fillcolor': 'black',
 				'fillopacity': 1.0,
 				'color': '#d3d3d3',
 				'opacity': 0.99,
