--- a/index.html
+++ b/index.html
@@ -155,14 +155,12 @@ L.control.watermark({ position: 'bottomleft' }).addTo(map);
 			console.log(position);
 			console.log(position.coords.latitude)
 			console.log(position.coords.longitude)
-			var userpos = L.circleMarker([position.coords.latitude,position.coords.longitude]).addTo(map);
-			userpos.setStyle({
-				'fillcolor': 'black',
-				'fillopacity': 1.0,
-				'color': '#d3d3d3',
-				'opacity': 0.99,
-				'radius': 16
-			})
+			var userpos = L.circleMarker([position.coords.latitude,position.coords.longitude], {
+    				color: '#4c8bf5',
+    				fillColor: '#4c8bf5',
+    				fillOpacity: 0.9,
+				radius: 6}).addTo(map);
+			
 		})
 	};
        </script>				
