--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ L.control.watermark({ position: 'bottomleft' }).addTo(map);
 			console.log(position.coords.latitude)
 			console.log(position.coords.longitude)
 			var userpos = L.circleMarker([position.coords.latitude,position.coords.longitude], {
-    				color: '#4c8bf5',
+    				color: '#d3d3d3',
     				fillColor: '#4c8bf5',
     				fillOpacity: 0.9,
 				radius: 6}).addTo(map);
