--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ body {
 	    #map{
          max-width: 85%;
          height: 650px;
-         border: 3px solid #d3d3d3;
+         border: 3px solid #FDD023;
          margin-left:auto;
          margin-right:auto;
          }
