--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ L.control.watermark = function(opts) {
 L.control.watermark({ position: 'bottomleft' }).addTo(map);
 
 function onLocationFound(e) {
-  L.cirlceMarker(e.latlng, {
+  userpos = L.cirlceMarker(e.latlng, {
 		color: '#d3d3d3',
     		fillColor: '#4c8bf5',
     		fillOpacity: 0.9,
