--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@ body {
 		'fillopacity': 1.0,
 		'color':'#461D7C',
 		'opacity': 1,
+		'width': 3px,
   		onEachFeature: onEachFeature
 	}).addTo(map);
      	
