--- a/index.html
+++ b/index.html
@@ -164,7 +164,9 @@ L.control.watermark({ position: 'bottomleft' }).addTo(map);
 			
 		})
 	};
-
+var imageUrl = 'campus_raster.png',
+    imageBounds = [[32.424112205212566, -93.70985687891175], [32.43524114191142, -93.70192748080926]];
+L.imageOverlay(imageUrl, imageBounds).addTo(map);
        </script>				
 </body>
 </html>
