--- a/index.html
+++ b/index.html
@@ -38,11 +38,14 @@ body {
       color: #461D7C;
       }
 	    #map{
+         #map{
+	 resize: horizontal;
          max-width: 85%;
-         height: 650px;
+         height: calc(100vh - 16px);
          border: 3px solid #FDD023;
          margin-left:auto;
          margin-right:auto;
+         padding-bottom: 50%;
          }
 	  .leaflet-popup-content h1 {
 		  margin: 0.2em 0;
