--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@ body {
 		{"type":"Feature","properties":{"building":"Anderson Field Station (RRWMI)","otherpois":"<a href='https://www.lsus.edu/community/rrwmi' target='_blank' rel='noopener noreferrer'>Research and Outreach Station</a>"},"geometry":{"type":"Polygon","coordinates":[[[-93.70171129703522,32.43443813676175],[-93.70166301727295,32.43431362769101],[-93.70149403810501,32.43437022274447],[-93.70153963565825,32.43446982995229],[-93.70156913995743,32.43446077475612],[-93.7015825510025,32.43448114894622],[-93.70171129703522,32.43443813676175]]]}}]};
 		
 	var layerGroup = L.geoJSON(lsus, {
-		'fillcolor':'#0A0946',
+		'fillcolor':'#FDD023',
 		'fillopacity': 1.0,
-		'color':'#461D7C',
+		'color': white,
 		'opacity': 1,
 		onEachFeature: onEachFeature
 	}).addTo(map);
