--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 	var layerGroup = L.geoJSON(lsus, {
 		'fillcolor':'#FDD023',
 		'fillopacity': 1.0,
-		'color': white,
+		'color': '#ffffff',
 		'opacity': 1,
 		onEachFeature: onEachFeature
 	}).addTo(map);
