--- a/index.html
+++ b/index.html
@@ -133,6 +133,182 @@ body {
 		'opacity': 1,
 		onEachFeature: onEachFeature
 	}).addTo(map);
+		
+	var background = {
+  "type": "FeatureCollection",
+  "features": [
+    {
+      "type": "Feature",
+      "properties": {
+      "fillcolor": "#461D7C",
+      "color": "#461D7C"},
+      "geometry": {
+        "coordinates": [
+          [
+            [
+              -93.70974744822121,
+              32.428662145483656
+            ],
+            [
+              -93.70929308508074,
+              32.42783192514419
+            ],
+            [
+              -93.70771224006806,
+              32.425008407075325
+            ],
+            [
+              -93.70362488196513,
+              32.42518509285455
+            ],
+            [
+              -93.69952441383268,
+              32.42528466142937
+            ],
+            [
+              -93.69616567108963,
+              32.42540968451779
+            ],
+            [
+              -93.6944500093365,
+              32.42545089269184
+            ],
+            [
+              -93.69468713328278,
+              32.427224761451356
+            ],
+            [
+              -93.69695957001493,
+              32.42917318402688
+            ],
+            [
+              -93.69742817641637,
+              32.429555673351075
+            ],
+            [
+              -93.69822118724795,
+              32.430251091716585
+            ],
+            [
+              -93.69864344796142,
+              32.430598805194535
+            ],
+            [
+              -93.69935417101871,
+              32.43119654259111
+            ],
+            [
+              -93.69966314227214,
+              32.4314660178282
+            ],
+            [
+              -93.70019721591522,
+              32.43182910883499
+            ],
+            [
+              -93.7004469676784,
+              32.43198557732768
+            ],
+            [
+              -93.69983159917709,
+              32.432526694657085
+            ],
+            [
+              -93.70031386138534,
+              32.43321624237355
+            ],
+            [
+              -93.70079276676769,
+              32.43386612965166
+            ],
+            [
+              -93.70110945981794,
+              32.43431162213456
+            ],
+            [
+              -93.7013798096646,
+              32.43468322413054
+            ],
+            [
+              -93.70229293655437,
+              32.43435872993142
+            ],
+            [
+              -93.70446583047509,
+              32.43312101810406
+            ],
+            [
+              -93.70514041771256,
+              32.432755929129044
+            ],
+            [
+              -93.70526039431768,
+              32.4323372264805
+            ],
+            [
+              -93.7054488049118,
+              32.43161205598598
+            ],
+            [
+              -93.70564706146595,
+              32.43148166505378
+            ],
+            [
+              -93.70591741131324,
+              32.43128825149081
+            ],
+            [
+              -93.70596633176143,
+              32.43122522900444
+            ],
+            [
+              -93.70609490195136,
+              32.43103115980924
+            ],
+            [
+              -93.70619789236937,
+              32.43085730407164
+            ],
+            [
+              -93.70649986763637,
+              32.43043706050943
+            ],
+            [
+              -93.70666465230484,
+              32.4302479911331
+            ],
+            [
+              -93.70680626412957,
+              32.43010890536131
+            ],
+            [
+              -93.70697362355884,
+              32.429963299714785
+            ],
+            [
+              -93.70712810918525,
+              32.42983725284559
+            ],
+            [
+              -93.7072996500624,
+              32.42973964072486
+            ],
+            [
+              -93.70785837307962,
+              32.42946581386414
+            ],
+            [
+              -93.70974744822121,
+              32.428662145483656
+            ]
+          ]
+        ],
+        "type": "Polygon"
+      }
+    }
+  ]
+}
+	L.geojson(background).addTo(map);
      	
 	L.Control.Watermark = L.Control.extend({
     				onAdd: function(map) {
