--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@ body {
     }
   ]
 }
-	L.geojson(background).addTo(map);
+	L.geoJSON(background).addTo(map);
      	
 	L.Control.Watermark = L.Control.extend({
     				onAdd: function(map) {
