--- a/index.html
+++ b/index.html
@@ -133,11 +133,27 @@ body {
 		'opacity': 1,
 		onEachFeature: onEachFeature
 	}).addTo(map);
-		
-	var background = "background.geojson";
-		
-	L.geoJSON(background).addTo(map);
-     	
+	
+	var backgroundStyle = {
+	"color": "#461D7C",
+    	"weight": 1,
+    	"opacity": 0.99
+	};
+
+	var background =  new L.geoJson( '' , {
+		style: backgroundStyle});
+	background.addTo(map);
+
+	$.ajax({
+		dataType: "json",
+		url: "background.geojson",
+		success: function(data) {
+			$(data.features).each(function(key, data) {
+				background.addData(data);
+			});
+		}
+	}).error(function() {});	
+		     	
 	L.Control.Watermark = L.Control.extend({
     				onAdd: function(map) {
         				var img = L.DomUtil.create('img');
