--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 			maxZoom: 18,
 			zoomOffset: -1,
 			id: 'mapbox/streets-v11',
-			accessToken: 'pk.eyJ1IjoibW1hZ3VpZ2EiLCJhIjoiY2t5MXNtbWFwMGU1aDJ5b2Q1Mmhpb25oZSJ9.B88DtgzuP3fxy3NDcjAeXQ'
+			accessToken: 'pk.eyJ1IjoibW1hZ3VpZ2EiLCJhIjoiY2xiMmMyemsyMDA5czNwcnBhZDFiaWcyeCJ9.TzzxHt4q9OIY6wJn5AzJdw'
 		}).addTo(map);
 		
 		//create function for each feature to create popup content to populate popup
