--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 		var layerGroup = L.geoJSON(lsus, {
 			'fillcolor':'#FDD023',
 			'fillopacity': 1.0,
-			'color': '#ffffff',
+			'color': '#FDD023',
 			'opacity': 1,
 			onEachFeature: onEachFeature
 		}).addTo(map);
