--- a/index.html
+++ b/index.html
@@ -153,10 +153,7 @@
 			'color': '#FDD023',
 			'opacity': 1,
 			onEachFeature: onEachFeature
-		}).addTo(map).on({
-			mouseover: highlight,
-  			mouseout: reset
-		});
+		}).addTo(map)
 		
 		//create background style
 		var backgroundStyle = {
