--- a/index.html
+++ b/index.html
@@ -81,6 +81,15 @@
 	margin: 0.2em 0;
 	font-family: Oswald}
 	}
+       @media screen and (max-height: 450px) {
+  	h1 {font-size: 24px;}
+        h2 {font-size: 23px;}
+        h3 {font-size: 22px;}
+        h4 {font-size: 21px;}
+        h5 {font-size: 20px;}
+        h6 {font-size: 19px;}
+        p {font-size: 18px;}
+	}
 </style>
 </head>
 <body>
