--- a/index.html
+++ b/index.html
@@ -105,6 +105,11 @@
 				 zoom: 16.35,
 				 });
 		
+                var tl = L.latLng(32.435, -93.71);
+                var br = L.latLng(32.4253, -93.693);
+                bounds = L.latLngBounds(tl, br);
+                map.fitBounds(bounds);
+
 		//create pane for background, set zIndex
 		map.createPane('back');
 		map.getPane('back').style.zIndex = 200;
