--- a/index.html
+++ b/index.html
@@ -57,6 +57,11 @@
         margin-right:auto;
         padding-bottom: 50%;
         }
+        .leaflet-popup-content-wrapper {background-color: #461D7C}  
+	
+	.leaflet-popup-tip {
+	background: #461D7C;
+	box-shadow: none !important;}
 	.leaflet-popup-content h1 {
 	margin: 0.2em 0;
 	font-family: Oswald;
@@ -64,7 +69,7 @@
 	.leaflet-popup-content h4 {
 	margin: 0.2em 0;
 	font-family: Oswald;
-      	color: #461D7C;}
+      	color: white;}
 	.leaflet-popup-content h6 {text-align: center;
     	color: #FDD023;
 	margin: 0.05em 0;
@@ -72,13 +77,13 @@
 	.leaflet-popup-content p {
 	margin: 0.2em 0;
 	font-family: Oswald;
-      	color: #461D7C;}
+      	color: white;}
 	.leaflet-popup-content a {text-align: left;
-	color:#461D7C;
+	color: white;
 	margin: 0.2em 0;
 	font-family: Oswald}
 	}
-       @media screen and (max-height: 450px) {
+       @media screen and (max-height: 650px) {
   	h1 {font-size: 24px;}
         h2 {font-size: 23px;}
         h3 {font-size: 22px;}
