--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
        		var map = L.map('map', {
 				 center: [32.42959784231365, -93.70386914933833],
 				 zoom: 18,
+                                 keyboard: true
 				 });
 		
                 var tl = L.latLng(32.4305, -93.71);
