--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 			onEachFeature: onEachFeature
 		}).addTo(map)
 		
-               
+                map.fitBounds(buildings.getBounds());
 
 		//create background style
 		var backgroundStyle = {
