--- a/index.html
+++ b/index.html
@@ -226,6 +226,7 @@
                 });
 
 var userpos = {};
+var oldpos = userpos;
 
 function onLocationFound(e) {
     userpos = L.circleMarker('', {
@@ -235,6 +236,9 @@ function onLocationFound(e) {
 	radius: 7});
     userpos.setLatLng(e.latlng);
     userpos.addTo(map);
+    if (map.hasLayer(oldpos)) {
+            map.removeLayer(oldpos);
+    }
 };
 
 map.on('locationfound', onLocationFound);
