--- a/index.html
+++ b/index.html
@@ -226,16 +226,25 @@
                              watch:true
                 });
 
-var userpos = {};
+var userpos = null;
 
 function onLocationFound(e) {
-    userpos = L.circleMarker('', {
-        color: '#d3d3d3',
-    	fillColor: '#4c8bf5',
-    	fillOpacity: 0.9,
-	radius: 7});
-    userpos.setLatLng(e.latlng);
-    userpos.addTo(map);
+    if (userpos == null) {
+           userpos = L.circleMarker(e.latlng, {
+                  color: '#d3d3d3',
+    	          fillColor: '#4c8bf5',
+    	          fillOpacity: 0.9,
+	          radius: 7}).addTo(map);
+    } 
+    else {
+           userpos = L.circleMarker('', {
+                  color: '#d3d3d3',
+    	          fillColor: '#4c8bf5',
+    	          fillOpacity: 0.9,
+	          radius: 7});
+           userpos.setLatLng(e.latlng);
+           userpos.addTo(map);
+    }
 };
 
 map.on('locationfound', onLocationFound);
