--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 		//add user location
                 map.locate({setView: false, 
                              maxZoom: 18,
-                             watch:true
+                             watch:false
                 });
 
 var userpos = null;
